k8s/platform/stella-api/stella-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stella-api
  namespace: platform
spec:
  ingressClassName: traefik
  rules:
    - host: stella.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stella-api
                port:
                  number: 8080
